# Tetris

./: .clang-format  .gitignore  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  CMakeLists.txt.msys2  README.md  Tetris.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  anamorphicfr.glsl  animatedBackground.cpp  animatedBackground.h  audioStream.cpp  audioStream.h  board.cpp  board.h  cl.sh  constants.h  explodefr.glsl  fire.cpp  fire.h  fog.cpp  fog.h  game.cpp  game.h  gameStatesQueue.cpp  gameStatesQueue.h  globals.h  ia.cpp  ia.h  main.vcxproj  main.vcxproj.filters  menu.cpp  menu.h  particles.cpp  particles.h  resources.cpp  resources.h  shapes.h  (+7 more)
.cache/clangd/index/: animatedBackground.cpp.14EE5AD9026636AD.idx  animatedBackground.h.09857B2715A6B6FD.idx  audioStream.cpp.5A062337BED0E958.idx  audioStream.h.3B56BDCA68D3E89F.idx  board.cpp.38083A3E9D6F1F4F.idx  board.h.D0D6808012EA9E46.idx  constants.h.0CF73168C8456650.idx  fire.cpp.6BCDE6DC54C26EBA.idx  fire.h.82F21B96975F3828.idx  fog.cpp.7B75EDE583B8FEF9.idx  fog.h.0FE5600425419085.idx  game.cpp.E31A22CFF2FF2CD5.idx  game.h.1C448D02422C8FD4.idx  gameStatesQueue.cpp.F66209C27B669EFE.idx  gameStatesQueue.h.811D038CA21B123A.idx  globals.h.EC99DA4DB62FCEF5.idx  ia.cpp.A7AB8FFD9C02B7F3.idx  ia.h.E1EDDE384E004968.idx  menu.cpp.FB5EA4B879508D79.idx  menu.h.29DD195D56F7773C.idx  particles.cpp.F492B81576169982.idx  particles.h.80E4EBEBAFF4F0FD.idx  shapes.h.C9275E2AAEE15924.idx  shapes3d.h.2D61452A0D823633.idx  tetris.cpp.4990E09E5A62FAA4.idx  tetris.h.1664DA9E9FA4DCC6.idx
resources/: tetris.icns
tetris.dir/Release/: tetris.exe.recipe
tetris.dir/Release/tetris.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  tetris.lastbuildstate
xcode/Debug/tetris.app/Contents/: Info.plist
xcode/Debug/tetris.app/Contents/_CodeSignature/: CodeResources
xcode/Tetris.xcodeproj/: project.pbxproj
xcode/Tetris.xcodeproj/project.xcworkspace/xcuserdata/rodoc.xcuserdatad/: UserInterfaceState.xcuserstate
xcode/Tetris.xcodeproj/xcuserdata/rodoc.xcuserdatad/xcschemes/: xcschememanagement.plist
